force-app/main/default/objects/Activity_based_Attendance__c/Activity_based_Attendance__c.object-meta.xml
<CustomObject>
    <description>Created to Add activity based attendance</description>
    <label>Activity  based Attendance</label>
    <nameField>
        <label>Activity based Attendance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity_based_Attendance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>