force-app/main/default/objects/Activity_based_Attendance__c/fields/Field_11__c.field-meta.xml
<CustomField>
    <fullName>Field_11__c</fullName>
    <label>Field 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>