force-app/main/default/objects/Activity_based_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_2__c</columns>
    <columns>Field_3__c</columns>
    <columns>Field_4__c</columns>
    <columns>Field_5__c</columns>
    <columns>Field_6__c</columns>
    <columns>Field_7__c</columns>
    <columns>Field_8__c</columns>
    <columns>Field_9__c</columns>
    <columns>Field_10__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>